# pogosm

./: .gitignore  CMakeLists.txt  build.sh  dev_list_1.txt  kernel.uf2  readme.md
.github/: FUNDING.yml
kernel/: CMakeLists.txt  core2.c  hooks.c  kernel.c  kernfs.c  led.c  panic.c  pcolor.c  shell.c  ssvm.c  stdin.c  syscall.c
kernel/user/: CMakeLists.txt  before_boot.c  core2.c
kernel/utils/: CMakeLists.txt  fs.c  reboot.c
